--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'variables';
 @import 'dashboard';
 @import 'sponsor';
+@import 'singleMessage';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
